[gd_scene load_steps=26 format=3 uid="uid://q60upyhtmqod"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_7utnr"]
[ext_resource type="Texture2D" uid="uid://bbhk34q8qptcg" path="res://assets/sprites/entities/tilemap-characters_packed.png" id="1_und8p"]
[ext_resource type="Script" path="res://entities/player/health.gd" id="4_pdtfd"]
[ext_resource type="Texture2D" uid="uid://vq1npgur3g83" path="res://assets/sprites/level/tilemap_packed_alt.png" id="5_dp5x0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qqe34"]
atlas = ExtResource("1_und8p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqe7c"]
atlas = ExtResource("1_und8p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_suupe"]
atlas = ExtResource("1_und8p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_16ecf"]
atlas = ExtResource("1_und8p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y46pt"]
atlas = ExtResource("1_und8p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ih4"]
atlas = ExtResource("1_und8p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_siu7s"]
atlas = ExtResource("1_und8p")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb4gv"]
atlas = ExtResource("1_und8p")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n2yc"]
atlas = ExtResource("1_und8p")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_clxrl"]
atlas = ExtResource("1_und8p")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_55j5w"]
atlas = ExtResource("1_und8p")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6bde"]
atlas = ExtResource("1_und8p")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4ppj"]
atlas = ExtResource("1_und8p")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8mrg"]
atlas = ExtResource("1_und8p")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ud02"]
atlas = ExtResource("1_und8p")
region = Rect2(144, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1ote"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqe34")
}],
"loop": true,
"name": &"blue_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqe7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suupe")
}],
"loop": true,
"name": &"blue_walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16ecf")
}],
"loop": true,
"name": &"green_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y46pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5ih4")
}],
"loop": true,
"name": &"green_walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_siu7s")
}],
"loop": true,
"name": &"orange_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb4gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n2yc")
}],
"loop": true,
"name": &"orange_walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clxrl")
}],
"loop": true,
"name": &"pink_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55j5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6bde")
}],
"loop": true,
"name": &"pink_walking",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4ppj")
}],
"loop": true,
"name": &"yellow_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8mrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ud02")
}],
"loop": true,
"name": &"yellow_walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ejnsj"]
radius = 9.0
height = 23.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0y75l"]
atlas = ExtResource("5_dp5x0")
region = Rect2(108, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tprnt"]
atlas = ExtResource("5_dp5x0")
region = Rect2(90, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xwh2"]
atlas = ExtResource("5_dp5x0")
region = Rect2(72, 36, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_06n6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y75l")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tprnt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xwh2")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_7utnr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m1ote")
animation = &"green_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CapsuleShape2D_ejnsj")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(2, 2)
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Health" type="Node2D" parent="."]
script = ExtResource("4_pdtfd")

[node name="Heart_1" type="AnimatedSprite2D" parent="Health"]
position = Vector2(-277, -151)
scale = Vector2(1.22222, 1.22222)
sprite_frames = SubResource("SpriteFrames_06n6w")
animation = &"2"

[node name="Heart_2" type="AnimatedSprite2D" parent="Health"]
position = Vector2(-255, -151)
scale = Vector2(1.22222, 1.22222)
sprite_frames = SubResource("SpriteFrames_06n6w")
animation = &"2"

[node name="Heart_3" type="AnimatedSprite2D" parent="Health"]
position = Vector2(-233, -151)
scale = Vector2(1.22222, 1.22222)
sprite_frames = SubResource("SpriteFrames_06n6w")
animation = &"2"

[node name="Heart_4" type="AnimatedSprite2D" parent="Health"]
position = Vector2(-211, -151)
scale = Vector2(1.22222, 1.22222)
sprite_frames = SubResource("SpriteFrames_06n6w")
animation = &"2"
